manifests-failed/appmesh-controller-1.13.0.tgz-manifest.yaml
---
# Source: appmesh-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-appmesh-controller-webhook-service
  namespace: appmesh-controller-1.13.0.tgz
  labels:
    app.kubernetes.io/name: appmesh-controller
    helm.sh/chart: appmesh-controller-1.13.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.13.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: my-release-appmesh-controller
---
# Source: appmesh-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-appmesh-controller
  namespace: appmesh-controller-1.13.0.tgz
  labels:
    control-plane: my-release-appmesh-controller
    app.kubernetes.io/name: appmesh-controller
    helm.sh/chart: appmesh-controller-1.13.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.13.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: my-release-appmesh-controller
  template:
    metadata:
      labels:
        control-plane: my-release-appmesh-controller
        app.kubernetes.io/name: my-release-appmesh-controller
        app.kubernetes.io/part-of: appmesh
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: my-release-appmesh-controller
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: my-release-appmesh-controller-webhook-server-cert
      containers:
      - name: controller
        image: "840364872350.dkr.ecr.us-west-2.amazonaws.com/amazon/appmesh-controller:v1.13.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8080
          name: metrics-server
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        command:
        - /controller
        args:
        - --enable-leader-election=true
        - --log-level=info
        - --sidecar-image-repository=840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy
        - --sidecar-image-tag=v1.27.3.0-prod
        - --sidecar-cpu-requests=10m
        - --sidecar-memory-requests=32Mi
        - --sidecar-cpu-limits=
        - --sidecar-memory-limits=
        - --init-image=840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-proxy-route-manager:v7-prod
        - --enable-stats-tags=false
        - --prestop-delay=20
        - --poststart-timeout=180
        - --poststart-interval=5
        - --readiness-probe-initial-delay=1
        - --readiness-probe-period=10
        - --envoy-admin-access-port=9901
        - --envoy-admin-access-log-file=/tmp/envoy_admin_access.log
        - --envoy-admin-access-enable-ipv6=false
        - --dual-stack-endpoint=false
        - --fips-endpoint=false
        - --envoy-aws-access-key-id=
        - --envoy-aws-secret-access-key=
        - --envoy-aws-session-token=
        - --preview=false
        - --enable-sds=false
        - --sds-uds-path=/run/spire/sockets/agent.sock
        - --enable-backend-groups=false
        - --cluster-name=
        - --use-aws-dual-stack-endpoint=false
        - --use-aws-fips-endpoint=false
        - --sidecar-log-level=info
        # this must be same as livenessProbe port which can be configured 
        - --health-probe-port=61779
        - --wait-until-proxy-ready=false
        # TLS configuration
        - --tls-min-version=VersionTLS12
        - --tls-cipher-suite=
        resources:
          limits:
            cpu: 2000m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 200Mi
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: 61779
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 10
---
# Source: appmesh-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-appmesh-controller-mutating-webhook-configuration
  labels:
    app.kubernetes.io/name: appmesh-controller
    helm.sh/chart: appmesh-controller-1.13.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.13.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-appmesh-k8s-aws-v1beta2-gatewayroute
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: mgatewayroute.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - gatewayroutes
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-appmesh-k8s-aws-v1beta2-mesh
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: mmesh.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - meshes
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-appmesh-k8s-aws-v1beta2-virtualnode
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: mvirtualnode.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualnodes
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-appmesh-k8s-aws-v1beta2-virtualrouter
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: mvirtualrouter.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualrouters
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-appmesh-k8s-aws-v1beta2-virtualservice
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: mvirtualservice.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualservices
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-appmesh-k8s-aws-v1beta2-virtualgateway
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: mvirtualgateway.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualgateways
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-appmesh-k8s-aws-v1beta2-backendgroup
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: mbackendgroup.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - backendgroups
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /mutate-v1-pod
  failurePolicy: Fail
  name: mpod.appmesh.k8s.aws
  namespaceSelector:
    matchExpressions:
      - key: appmesh.k8s.aws/sidecarInjectorWebhook
        operator: In
        values:
          - enabled
          - disabled
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
---
# Source: appmesh-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-appmesh-controller-validating-webhook-configuration
  labels:
    app.kubernetes.io/name: appmesh-controller
    helm.sh/chart: appmesh-controller-1.13.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.13.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /validate-appmesh-k8s-aws-v1beta2-gatewayroute
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: vgatewayroute.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - gatewayroutes
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /validate-appmesh-k8s-aws-v1beta2-mesh
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: vmesh.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - meshes
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /validate-appmesh-k8s-aws-v1beta2-virtualnode
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: vvirtualnode.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualnodes
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /validate-appmesh-k8s-aws-v1beta2-virtualrouter
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: vvirtualrouter.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualrouters
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /validate-appmesh-k8s-aws-v1beta2-virtualservice
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: vvirtualservice.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualservices
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /validate-appmesh-k8s-aws-v1beta2-virtualgateway
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: vvirtualgateway.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualgateways
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
- clientConfig:
    service:
      name: my-release-appmesh-controller-webhook-service
      namespace: appmesh-controller-1.13.0.tgz
      path: /validate-appmesh-k8s-aws-v1beta2-backendgroup
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMRENDQWhTZ0F3SUJBZ0lSQUpCTEVUMVhIL1FmbkpMelFRc2l5dTB3RFFZSktvWklodmNOQVFFTEJRQXcKSURFZU1Cd0dBMVVFQXhNVllYQndiV1Z6YUMxamIyNTBjbTlzYkdWeUxXTmhNQjRYRFRJME1EWXlNREUwTlRVdwpNMW9YRFRNME1EWXhPREUwTlRVd00xb3dJREVlTUJ3R0ExVUVBeE1WWVhCd2JXVnphQzFqYjI1MGNtOXNiR1Z5CkxXTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTdhQjVJZlhkYlluNVRmZTYKckJ1ejFGalFxbkVFWkh4WGdGQjAwalMwMUNFaHBpQ0VlT0VEVTZjTGFKMzhZL1AraHRIOUJxMmk1RjZSVjB4RApUZ00yL2I1ZG1Wa0 [...]
  failurePolicy: Fail
  name: vbackendgroup.appmesh.k8s.aws
  rules:
  - apiGroups:
    - appmesh.k8s.aws
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - backendgroups
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
